@@ -1,4 +1,8 @@
-﻿drkns 05.05.2014 19:03:55 +0200 - build 3891
+﻿drkns 07.05.2014 00:00:37 +0200 - build 3892
+
+1. Неправильно работала сортировка по расширению файлов с ':' в имени (да, и такое бывает).
+
+drkns 05.05.2014 19:03:55 +0200 - build 3891
 
 1. Уточнение 3890.
 
